<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:id="@+id/dashboard_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/event_Button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:text="@string/event"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner_button"/>


        <Button
            android:id="@+id/my_profile_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:text="@string/my_profile"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner_button"/>

        <Button
            android:id="@+id/create_event_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="16dp"
            android:text="@string/create_event"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner_button"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>