<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent"
    android:id="@+id/create_event">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-104dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/job_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:hint="@string/enter_job_type"
                android:importantForAutofill="no"
                android:padding="@dimen/padding_small" />

            <EditText
                android:id="@+id/venue_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:hint="@string/enter_venue_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/start_date"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:focusable="false"
                android:hint="@string/enter_start_date"
                android:importantForAutofill="no"
                android:inputType="date" />

            <EditText
                android:id="@+id/start_time"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:focusable="false"
                android:hint="@string/enter_start_time"
                android:importantForAutofill="no"
                android:inputType="time" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:focusable="false"
                android:hint="@string/enter_end_date"
                android:importantForAutofill="no"
                android:inputType="date" />

            <EditText
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:focusable="false"
                android:hint="@string/enter_end_time"
                android:importantForAutofill="no"
                android:inputType="time" />

            <EditText
                android:id="@+id/number_of_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:hint="@string/enter_number_of_staff"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/create_event_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/submit" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>