<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".EventDashboard"
    android:id="@+id/event_dashboard"
    >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>


