...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:id="@+id/user_profile_activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
...
